--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@ section{
     font-size: 72px;
     height: 500px;
     line-height: 500px;
+    cursor: pointer;
 }
 
 .intro-content{
@@ -834,24 +835,29 @@ footer>div>p{
 
 footer>div>div{
     float: right;
+    margin-top: 32px;
 }
 
 footer>div>div>img{
-    display: inline-block;
+    display: block;
+    float:left;
     width: 35px;
     height: 35px;
 }
 
 footer>div>div>p{
-    display: inline-block;
+    display: block;
+    float: left;
     letter-spacing: 1.25px;
-    line-height: 100px;
+    height: 18px;
+    line-height: 18px;
     text-align: right;
     font-weight: 500;
     font-size: 18px;
     color: #a1a1a1;
     text-transform: uppercase;
-    margin-left: 50px;
+    margin-left: 65px;
+    margin-top: 12px;
 }
 
 /* F O R M U L A R Z - K A K U L A T O R*/
